[package]
name = "bitfinex"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]

description = "Rust Library for the Bitfinex API"
keywords = ["cryptocurrency", "trading"]
documentation = "https://docs.rs/crate/bitfinex/"
repository = "https://github.com/wisespace-io/bitfinex-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/bitfinex-rs" }

[lib]
name = "bitfinex"
path = "src/lib.rs"

[dependencies]
clippy = { version = "0.0.200", optional = true }
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.11"
ring = "0.12.1"
reqwest = "0.8"
url = "1.6"
log = "0.3"
tungstenite = "0.5.3"
postgres = {version="0.15.2", features=["with-chrono"]}
r2d2 = "0.8.2"

